# wjk-20-indexer

./: .env.example  Cargo.toml  Dockerfile  WOJAKCOIN.md
.github/actions/check-image-exists/: action.yml
.github/actions/deploy-over-ssh/: action.yml
.github/actions/repository-dispatch/: action.yml
.github/actions/resolve-service-tag/: action.yml
.github/actions/wipe-over-ssh/: action.yml
.github/workflows/: build_and_release_image.yml  ci_checks.yml  deploy_service.yml  wipe_service.yml
src/: blockchain.rs  main.rs
src/db/: structs.rs
src/inscriptions/: structs.rs
src/rest/: address.rs  history.rs  mod.rs  types.rs
src/server/: mod.rs
src/tokens/: parser.rs  proto.rs  structs.rs
